[gd_scene load_steps=9 format=2]

[ext_resource path="res://screens/intro/IntroScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/Scientist_Aftermath_Portrait.png" type="Texture" id=2]
[ext_resource path="res://assets/UI_Panel.png" type="Texture" id=3]
[ext_resource path="res://assets/Outro_Background.png" type="Texture" id=4]
[ext_resource path="res://fonts/pix-pixelfjverdana12pt/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "animate_left_scientist"

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.615686, 0.615686, 0.615686, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scientist_Left/Scientist:margin_left")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -184.0, -184.0, -64.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scientist_Left/Scientist:margin_right")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -56.0, -56.0, 64.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scientist_Right/Scientist:margin_left")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 56.0, 56.0, -64.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scientist_Right/Scientist:margin_right")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 184.0, 184.0, 64.0 ]
}

[node name="Outro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
margin_right = 384.0
margin_bottom = 216.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scientist_Left" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -20.0
margin_right = -72.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scientist" type="TextureRect" parent="Scientist_Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scientist_Right" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = -20.0
margin_right = 200.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scientist" type="TextureRect" parent="Scientist_Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialoguePanel" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -100.0
margin_right = 128.0
margin_bottom = -20.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialoguePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animate_left_scientist = SubResource( 2 )
anims/intro_start = SubResource( 3 )

[node name="DialoguePanelTween" type="Tween" parent="."]

[node name="TextTween" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
